0.3.3
-updated russian, brazilian portuguese, german, spanish, french translations
-updated documentation
-updated inotify header
-added italian translation (Thanks to Daniele Bortoluzzi)
-option for an external command for notification

0.3.2
-using inotify (0.24 - kernel >= 2.6.13rc3) for message arrival notification if available
-replaced showToolBar + friends with recommended members

0.3.1
-updated russian, spanish, brazilian portuguese and vietnamese translations

0.3.1rc3
-fixed documentation building

0.3.1rc2
-updated and corrected licensing
-updated french translation

0.3.1rc1
-little changes to libsmbclient initalization
-updated norwegian translation
-documentation updates
-tweaks to time handling

0.3.1pre2
-added treeview mode for makepopup
-a lot of little code changes/fixes/new bugs

0.3a
-new translation: french (by Pascal and me, quite rough though)
-new translation: brazilian portuguese (Thanks to Cesar A. Ramina)
-fix a small message count bug

0.3.1pre1
-dry and rough translation to french by Pascal and me (some additional help by a native speaker would be cool ;-)
-new translation: brazilian portuguese (Thanks to Cesar A. Ramina)
-sending one message to more than one host (separated by space) or whole workgroup
-discovered i18n args ;-)

0.3
-fixed crash if cancelling new popup while browse threads still running
-updated norwegian, spanish and vietnamese translation

0.3rc1
-new translation: vietnamese (Thanks to Khuc Ngoc Vinh)
-fix configure to give an error if libsmbclient devel is not installed
-documentation updates

0.3pre3
-small fix for desktop file to show handbook in khelpcenter
-slightly changed behavior of start docked - now run docked
-properly quit from systemtray
-made readGroupList and readHostsList threads (not blocking)
-2s timeout for libsmbclient

0.3pre2
- started converting to use libsmbclient

0.3pre1
-check that host-, login- and fullname are not empty
-initialize makepopup with own workgroup if possible