@@ -35,6 +35,10 @@
             <label>URL of external command</label>
             <default></default>
     </entry>
+    <entry name="ArMsg" type="String">
+            <label>Message for autoreply</label>
+            <default>Sorry, I'm away at the moment.</default>
+    </entry>
     <entry name="RunDocked" type="Bool">
             <label>Run docked</label>
             <default>false</default>
