@@ -1,3 +1,6 @@
+next
+-new feature: autoreply
+
 0.3.3
 -updated russian, brazilian portuguese, german, spanish, french translations
 -updated documentation
